# nestdfx-au250-hw-shell

./: .gitignore  Makefile  README.md
accelerators/: README.md
accelerators/ddr_scale_hls/: README.md  project_gen_reconfig.tcl
accelerators/ddr_scale_hls/hls/: Makefile  run_hls.tcl
accelerators/ddr_scale_hls/hls/export/: component.xml
accelerators/ddr_scale_hls/hls/export/drivers/ddr_scale_accel_v1_0/src/: CMakeLists.txt  Makefile  xddr_scale_accel.c  xddr_scale_accel.h  xddr_scale_accel_hw.h  xddr_scale_accel_linux.c  xddr_scale_accel_sinit.c
accelerators/ddr_scale_hls/hls/export/hdl/verilog/: ddr_scale_accel.v  ddr_scale_accel_control_s_axi.v  ddr_scale_accel_flow_control_loop_pipe.v  ddr_scale_accel_gmem_m_axi.v  ddr_scale_accel_mul_32s_32s_32_2_1.v
accelerators/ddr_scale_hls/hls/export/hdl/vhdl/: ddr_scale_accel.vhd  (+4 more)
accelerators/ddr_scale_hls/hls/src/: ddr_scale_accel.cpp  ddr_scale_accel.h
accelerators/ddr_scale_hls/hls/tb/: ddr_scale_accel_tb.cpp
accelerators/project_generation_script_changes/: edited_dfx_flow.tcl  vivado_version.tcl
accelerators/timer_bram/: README.md
bitstreams/: Makefile
dfx_prj/: Makefile  README.md  README_old.md  run.sh
images/: README.md
implementation_A0/: README.md
implementation_A1/: Makefile
scripts/: README.md  generate_all_bitstreams.tcl  implement_A1_level1.tcl  project_gen_reconfig.tcl  syn_reconfig.tcl
scripts/project_generation_script_changes/: vivado_version.tcl
source/: README.md
source/hdl/: reconfig_base_inst.vhd
source/xdc/: top.xdc
synthesis/: Makefile  run.sh
(+3 files in other folders)
